--- a/src/app/empleados/list-empleados/list-empleados.component.html
+++ b/src/app/empleados/list-empleados/list-empleados.component.html
@@ -1,3 +1,3 @@
-<app-list-item title="Empleados" [canAddItem]="hasAdminPermission()" (OnAddClicked)="add()">
-  <png-table [columns]="columns" [data]="empleados" [menuItems]="menuItems"></png-table>
+<app-list-item title="Empleados">
+  <png-table [columns]="columns" [data]="empleados" [canEditDelete]="hasAdminPermission()" (actionClicked)="actionClicked($event)"></png-table>
 </app-list-item>
