--- a/src/app/usuarios/list-usuarios/list-usuarios.component.html
+++ b/src/app/usuarios/list-usuarios/list-usuarios.component.html
@@ -1,4 +1,4 @@
-<app-list-item title="Usuarios" [canAddItem]="hasAdminPermission()">
-    <png-table [columns]="columns" [data]="usuarios" [canEditDelete]="true" (click)="actionClicked($event)"></png-table>
+<app-list-item title="Usuarios">
+    <png-table [columns]="columns" [data]="usuarios" [canEditDelete]="hasAdminPermission()" (actionClicked)="actionClicked($event)"></png-table>
 </app-list-item>
 
