--- a/src/app/shared/ui/prime-ng/password/password.component.html
+++ b/src/app/shared/ui/prime-ng/password/password.component.html
@@ -1,16 +1,21 @@
 <div>
-    <div [ngClass]="{'p-float-label mt-3': floatLabel}" class="p-field" [formGroup]="fg">
-        <label *ngIf="!floatLabel" [for]="control" class="inline-label" [class.p-error]="!fg.controls[control].valid && fg.controls[control].dirty">{{ label }}: </label>
+    <span [ngClass]="{'p-float-label mt-3': floatLabel}" class="p-field" [formGroup]="fg">
+        <label *ngIf="!floatLabel" 
+            [for]="control" 
+            class="inline-label" 
+            [ngStyle]="{'width.px': labelWidth}"
+            [class.p-error]="!fg.controls[control].valid && fg.controls[control].dirty">{{ label }}:
+        </label>
         <p-password [id]="control" 
             [formControlName]="control" 
             [placeholder]="placeholder"
             [toggleMask]="toggleMask"
             [feedback]="feedback"
             [required]="required" 
-            [disabled]="disabled"
-            [ngStyle]="{ height: floatLabel ? '2.5rem' : 'initial' }">
+            [disabled]="disabled">
         </p-password>
         <label *ngIf="floatLabel" [for]="control">{{ label }}</label>
-    </div>
-    <small *ngIf="!fg.controls[control].valid && fg.controls[control].dirty" id="username2-help" class="p-error">Este campo es obligatorio</small>
+    </span>
+    <small *ngIf="fg.controls[control].invalid && fg.controls[control].errors?.['required'] && (fg.controls[control].dirty || fg.controls[control].touched)" class="p-error">Este campo es obligatorio.</small>
+    <small *ngIf="fg.controls[control].invalid && fg.controls[control].errors?.['minLength']" class="p-error">Introduzca más caracteres.</small>
 </div>
