--- a/src/app/usuarios/list-usuarios/list-usuarios.component.html
+++ b/src/app/usuarios/list-usuarios/list-usuarios.component.html
@@ -2,3 +2,4 @@
     <png-table [columns]="columns" [data]="usuarios" [canEditDelete]="hasAdminPermission()" (actionClicked)="actionClicked($event)"></png-table>
 </app-list-item>
 
+<p-toast></p-toast>
