Se agrega la opción de Seleccion en la tabla de PrimeNG

--- a/src/app/shared/ui/prime-ng/table/table.component.html
+++ b/src/app/shared/ui/prime-ng/table/table.component.html
@@ -1,58 +1,107 @@
+<p-toolbar *ngIf="canEditDelete" class="mb-4">
+    <ng-template pTemplate="left">
+        <button pButton pRipple label="Nuevo" icon="pi pi-plus" class="p-button-success mr-2" (click)="onActionClicked('add')"></button>
+        <button pButton pRipple label="Eliminar" icon="pi pi-trash" class="p-button-danger" (click)="onActionClicked('delete')" [disabled]="!selectedRow || !selectedRow.length"></button>
+    </ng-template>
+</p-toolbar>
+
 <p-table #table
     [columns]="columns" 
     [value]="data" 
     [sortField]="groupField" 
     sortMode="single" 
-    rowGroupMode="subheader" 
+    [rowGroupMode]="groupMode" 
     [groupRowsBy]="groupField"
     responsiveLayout="scroll"
     styleClass="p-datatable-gridlines"
     [paginator]="paginator" 
-    [rows]="20" 
-    [rowsPerPageOptions]="[20,50,100]" 
+    [(selection)]="selectedRow"
+    [dataKey]="groupField"
+    [rows]="25" 
+    [rowsPerPageOptions]="[25,50,100]" 
     [loading]="loading" 
+    expandableRowGroups="true"
+    expandableRows="true"
     [showCurrentPageReport]="true" 
     currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros"
     [globalFilterFields]="getFields()">
     <ng-template pTemplate="header" let-columns>
         <tr>
-            <th *ngFor="let col of columns" [class.text-right]="col.type === 'number' || col.type === 'decimal'" [pSortableColumn]="col.field" [style.width]="col.type === 'boolean' ? '100px' : 'auto'" pResizableColumn>
-                {{ col.header }}
-                <p-sortIcon [field]="col.field"></p-sortIcon>
+            <th *ngIf="canEditDelete">
+                <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
             </th>
-            <th *ngIf="menuItems" class="menu-items-cell"></th>
+            <ng-container *ngFor="let col of columns" >
+                <th *ngIf="groupMode === 'rowspan'" [class.text-right]="col.type === 'number' || col.type === 'decimal'" [pSortableColumn]="col.field" [style.width]="col.type === 'boolean' ? '100px' : 'auto'" pResizableColumn>
+                    {{ col.header }}
+                    <p-sortIcon [field]="col.field"></p-sortIcon>
+                </th>
+                <th *ngIf="groupMode !== 'rowspan' && col.field !== groupField " [class.text-right]="col.type === 'number' || col.type === 'decimal'" [pSortableColumn]="col.field" [style.width]="col.type === 'boolean' ? '100px' : 'auto'" pResizableColumn>
+                    {{ col.header }}
+                    <p-sortIcon [field]="col.field"></p-sortIcon>
+                </th>
+            </ng-container>
+            <th *ngIf="canEditDelete" class="menu-items-cell"></th>
         </tr>
         <tr *ngIf="filterData">
-            <th *ngFor="let col of columns" [ngSwitch]="col.type">
-                <p-columnFilter *ngSwitchCase="'date'" type="date" [field]="col.field" matchMode="is" class="w-full">
-                    <ng-template pTemplate="filter" let-filter="filterCallback">
-                        <p-calendar (onSelect)="filter($event)" dateFormat="dd/mm/yy"></p-calendar>
-                    </ng-template>
-                </p-columnFilter>
-                <p-columnFilter *ngSwitchCase="'boolean'" type="boolean" [field]="col.field" matchMode="is" class="w-full"></p-columnFilter>
-                <p-columnFilter *ngSwitchDefault type="text" [field]="col.field" matchMode="contains" class="w-full"></p-columnFilter>
-            </th>
-            <th *ngIf="menuItems" class="menu-items-cell"></th>
+            <th *ngIf="canEditDelete" class="menu-select-cell"></th>            
+            <ng-container *ngFor="let col of columns" >
+                <th *ngIf="groupMode === 'rowspan'  " [ngSwitch]="col.type">
+                    <p-columnFilter *ngSwitchCase="'date'" type="date" [field]="col.field" matchMode="is" class="w-full">
+                        <ng-template pTemplate="filter" let-filter="filterCallback">
+                            <p-calendar (onSelect)="filter($event)" dateFormat="dd/mm/yy"></p-calendar>
+                        </ng-template>
+                    </p-columnFilter>
+                    <p-columnFilter *ngSwitchCase="'boolean'" type="boolean" [field]="col.field" matchMode="is" class="w-full"></p-columnFilter>
+                    <p-columnFilter *ngSwitchDefault type="text" [field]="col.field" matchMode="contains" class="w-full"></p-columnFilter>
+                </th>
+                <th *ngIf="groupMode !== 'rowspan' && col.field !== groupField " [ngSwitch]="col.type">
+                    <p-columnFilter *ngSwitchCase="'date'" type="date" [field]="col.field" matchMode="is" class="w-full">
+                        <ng-template pTemplate="filter" let-filter="filterCallback">
+                            <p-calendar (onSelect)="filter($event)" dateFormat="dd/mm/yy"></p-calendar>
+                        </ng-template>
+                    </p-columnFilter>
+                    <p-columnFilter *ngSwitchCase="'boolean'" type="boolean" [field]="col.field" matchMode="is" class="w-full"></p-columnFilter>
+                    <p-columnFilter *ngSwitchDefault type="text" [field]="col.field" matchMode="contains" class="w-full"></p-columnFilter>
+                </th>
+            </ng-container>
+            <th *ngIf="canEditDelete" class="menu-items-cell"></th>
         </tr>
     </ng-template>
-    <ng-template *ngIf="groupField" pTemplate="groupheader" let-rowData>
+
+    <ng-template *ngIf="groupField" pTemplate="groupheader" let-rowData let-expanded="expanded">
         <tr pRowGroupHeader>
-            <td colspan="12">
-                <span class="font-bold">{{ rowData[groupField] }}</span>
+            <td colspan="12" class="flex align-items-center">
+                <button *ngIf="expandible" type="button" pButton pRipple [pRowToggler]="rowData" class="p-button-text p-button-rounded p-button-plain mr-2" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
+                <span class="font-bold">{{ _(rowData, groupField) }}</span>
             </td>
         </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-rowData let-columns="columns">
+    
+    <ng-template [pTemplate]="expandible && groupMode==='subheader' ? 'rowexpansion' :'body'" let-rowData let-columns="columns" let-rowgroup="rowgroup" let-rowspan="rowspan">
         <tr>
-            <td *ngFor="let col of columns" [ngSwitch]="col.type" [class.text-right]="col.type === 'number' || col.type === 'decimal'">
-                <span *ngSwitchCase="'date'"> {{ rowData[col.field] | date }}</span>
-                <span *ngSwitchCase="'decimal'"> {{ rowData[col.field] | currency }}</span>
-                <i *ngSwitchCase="'boolean'" class="pi" [ngClass]="{'true-icon pi-check-circle': rowData[col.field], 'false-icon pi-times-circle': !rowData[col.field]}"></i>
-                <span *ngSwitchDefault> {{ _(rowData, col.field) }}</span>
+            <td *ngIf="canEditDelete">
+                <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
             </td>
-            <td *ngIf="menuItems" class="menu-items-cell">
-                <button #btn type="button" pButton icon="mdi mdi-dots-vertical" class="p-button-vertical-menu p-button-rounded p-button-text" (click)="menu.toggle($event)"></button>
-                <p-slideMenu #menu [model]="menuItems" [popup]="true" [viewportHeight]=120 (onShow)="updateMetaData(rowData)"></p-slideMenu>
+            <td *ngIf="rowgroup && groupMode === 'rowspan'" [attr.rowspan]="rowspan">
+                <span class="p-text-bold p-ml-2">{{_(rowData, groupField)}}</span>
+            </td>
+            <ng-container  *ngFor="let col of columns">
+                <td *ngIf="groupMode === 'rowspan' && col.field !== groupField " [ngSwitch]="col.type" [class.text-right]="col.type === 'number' || col.type === 'decimal'">
+                    <span *ngSwitchCase="'date'"> {{ rowData[col.field] | date }}</span>
+                    <span *ngSwitchCase="'decimal'"> {{ rowData[col.field] | currency }}</span>
+                    <i *ngSwitchCase="'boolean'" class="pi" [ngClass]="{'true-icon pi-check-circle': rowData[col.field], 'false-icon pi-times-circle': !rowData[col.field]}"></i>
+                    <span *ngSwitchDefault> {{ _(rowData, col.field) }}</span>
+                </td>
+                <td *ngIf="groupMode !== 'rowspan' && col.field !== groupField " [ngSwitch]="col.type" [class.text-right]="col.type === 'number' || col.type === 'decimal'">
+                    <span *ngSwitchCase="'date'"> {{ rowData[col.field] | date }}</span>
+                    <span *ngSwitchCase="'decimal'"> {{ rowData[col.field] | currency }}</span>
+                    <i *ngSwitchCase="'boolean'" class="pi" [ngClass]="{'true-icon pi-check-circle': rowData[col.field], 'false-icon pi-times-circle': !rowData[col.field]}"></i>
+                    <span *ngSwitchDefault> {{ _(rowData, col.field) }}</span>
+                </td>
+            </ng-container>
+            <td *ngIf="canEditDelete" class="menu-items-cell" style="padding: 0 !important;">
+                <button pButton pRipple icon="mdi mdi-18px mdi-pencil" class="p-button-rounded p-button-text p-button-warning" pTooltip="Modificar" tooltipPosition="left" (click)="onActionClicked('edit', rowData)"></button>
+                <button pButton pRipple icon="mdi mdi-18px mdi-delete" class=" p-button-rounded p-button-text p-button-danger" pTooltip="Eliminar" tooltipPosition="left" (click)="onActionClicked('delete', rowData)"></button>
             </td>
         </tr>
     </ng-template>
