--- a/src/app/shared/ui/prime-ng/table/table.component.scss
+++ b/src/app/shared/ui/prime-ng/table/table.component.scss
@@ -7,6 +7,12 @@
 .menu-items-cell {
     position: relative;
     text-align: center !important;
+    width: 5rem !important;
+}
+
+.menu-select-cell {
+    position: relative;
+    text-align: center !important;
     width: 2rem !important;
 }
 
