--- a/src/app/shared/ui/prime-ng/prime-ng.scss
+++ b/src/app/shared/ui/prime-ng/prime-ng.scss
@@ -57,11 +57,6 @@
     width: 2rem !important;
 }
 
-.p-button.p-button-icon-only.p-button-rounded.p-button-sm {
-    height: 1rem !important;
-    width: 1rem !important;
-}
-
 .p-button.p-button-icon-only.p-button-rounded.p-button-lg {
     height: 3rem !important;
     width: 3rem !important;
@@ -86,6 +81,11 @@
 
 .p-tooltip label {
     padding: .5rem !important;
+}
+
+.p-toolbar {
+    padding: .5rem !important;
+    margin-bottom: .5rem !important;
 }
 
 .p-field-checkbox, .p-field-radiobutton {
@@ -114,7 +114,7 @@
 
 .p-datatable .p-datatable-thead > tr > th,
 .p-datatable .p-datatable-tbody > tr > td {
-    padding: .5rem .5rem !important;
+    padding: .5rem !important;
 }
 
 .p-paginator .p-dropdown, 
