--- a/src/app/expresiones/list-expresiones/list-expresiones.component.html
+++ b/src/app/expresiones/list-expresiones/list-expresiones.component.html
@@ -1,3 +1,3 @@
-<app-list-item title="Expresiones" (OnAddClicked)="add()">
-  <png-table [columns]="columns" [data]="expresiones" [menuItems]="menuItems"></png-table>
+<app-list-item title="Expresiones">
+  <png-table [columns]="columns" [data]="expresiones" [canEditDelete]="true"></png-table>
 </app-list-item>
