--- a/src/app/clasificador-entidades/list-clasificador-entidades/list-clasificador-entidades.component.html
+++ b/src/app/clasificador-entidades/list-clasificador-entidades/list-clasificador-entidades.component.html
@@ -1,3 +1,3 @@
-<app-list-item title="Clasificador de Entidades" [canAddItem]="hasAdvancedUserPermission()" (OnAddClicked)="add()">
+<app-list-item title="Clasificador de Entidades">
   <am-table [columns]="displayedColumns" [data]="dataSource" [menuItems]="menuItems" (clickAction)="onClicked($event)"></am-table>
 </app-list-item>
