--- a/src/app/comparar-expresiones/list-comparar-expresiones/list-comparar-expresiones.component.html
+++ b/src/app/comparar-expresiones/list-comparar-expresiones/list-comparar-expresiones.component.html
@@ -1,3 +1,3 @@
-<app-list-item title="Comparación de Expresiones" (OnAddClicked)="add()">
-  <png-table [columns]="columns" [data]="compararExpresiones" [menuItems]="menuItems"></png-table>
+<app-list-item title="Comparación de Expresiones">
+  <png-table [columns]="columns" [data]="compararExpresiones" [canEditDelete]="true"></png-table>
 </app-list-item>
