--- a/src/app/cuentas-no-permitidas/list-cuentas-no-permitidas/list-cuentas-no-permitidas.component.html
+++ b/src/app/cuentas-no-permitidas/list-cuentas-no-permitidas/list-cuentas-no-permitidas.component.html
@@ -1,3 +1,3 @@
-<app-list-item title="Cuentas no Permitidas" (OnAddClicked)="add()">
-  <png-table [columns]="columns" [data]="cuentasNoPermitidas" [menuItems]="menuItems" [loading]="loading"></png-table>
+<app-list-item title="Cuentas no Permitidas">
+  <png-table [columns]="columns" [data]="cuentasNoPermitidas" [canEditDelete]="true" [loading]="loading"></png-table>
 </app-list-item>
