--- a/src/app/epigrafes/list-epigrafes/list-epigrafes.component.html
+++ b/src/app/epigrafes/list-epigrafes/list-epigrafes.component.html
@@ -1,3 +1,3 @@
-<app-list-item title="Epígrafes" [canAddItem]="hasAdvancedUserPermission()" (OnAddClicked)="add()">
+<app-list-item title="Epígrafes">
   <am-table class="m-t-5" [columns]="displayedColumns" [data]="epigrafes" [menuItems]="menuItems" (clickAction)="onClicked($event)"></am-table>
 </app-list-item>
