--- a/src/app/tipo-entidades/list-tipo-entidades/list-tipo-entidades.component.html
+++ b/src/app/tipo-entidades/list-tipo-entidades/list-tipo-entidades.component.html
@@ -1,3 +1,3 @@
-<app-list-item title="Tipos de Entidad" [canAddItem]="hasAdvancedUserPermission()" (OnAddClicked)="add()">
+<app-list-item title="Tipos de Entidad">
   <am-table [columns]="displayedColumns" [data]="dataSource" [menuItems]="menuItems" (clickAction)="onClicked($event)"></am-table>
 </app-list-item>
